# github-repository-importance

./: .gitattributes  READMe.md  conf.py  failed.txt  feature_engineering.ipynb  feature_getter.py  feature_getter_.py  get.py  get_.py  github_data.ipynb  init.py  micro.py  owner_repos.txt  owner_repos_.txt  patcher.py  pre_select.py  query.py  repo_process.ipynb  rescrape.txt  run.py  set_params.py
data/: y.csv
new_result/: .gitattributes  100000_0.csv  recent_commit.csv
patches/client/: new_client.py  old_client.py
result/: .data2.csv.swp  100000_0.csv  100000_1.csv  add_labels.csv  data.csv  data2.csv  data3.csv  data8.csv  data9.csv  data_.csv  data_0.csv  data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  domain_author_count.json  failed.txt  lack0.csv  lack1.csv  latest_commits.csv  new_40000_failed0.csv  new_40000_failed1.csv  new_40000_failed2.csv  rescrape.csv  rescrape_rc.csv
settings/: aliases.json  projects.json  setup (copy).cfg  setup.cfg  shdb.cfg
settings/projects/: project_DaveDavenport;rofi.json  project_IoLanguage;io.json  project_Qihoo360;phptrace.json  project_irssi;irssi.json  project_libusb;libusb.json  project_lloyd;yajl.json  project_raspberrypi;linux.json  project_raspberrypi;userland.json  project_tvheadend;tvheadend.json
settings/setups/: setup_DaveDavenport;rofi.cfg  setup_IoLanguage;io.cfg  setup_Qihoo360;phptrace.cfg  setup_irssi;irssi.cfg  setup_libusb;libusb.cfg  setup_lloyd;yajl.cfg  setup_raspberrypi;linux.cfg  setup_raspberrypi;userland.cfg  setup_tvheadend;tvheadend.cfg
