[general]
short_name = grimoirelab
update = false
min_update_delay = 1
bulk_size = 5000
scroll_size = 1000
debug = false
logs_dir = logs
aliases_file = settings/aliases.json

[projects]
projects_file = settings/projects.json

[es_collection]
url = http://localhost:9200

[es_enrichment]
url = http://localhost:9200
autorefresh = true

[sortinghat]
host = localhost
user = root
password = 
database = shdb
load_orgs = false
orgs_file = settings/organizations.json
autoprofile = [github, pipermail, git]
matching = [email]
sleep_for = 0
#identities_api_token = [6d8e4953a6b1ada8d07579914f06cb8844725926, 5cf32f6a078331f3bddf2fe8928de3b7cd32efac, 4f5cf24e81f28e158d6d3192a1bdc9da947a115a]
unaffiliated_group = Unknown
affiliate = true
strict_mapping = false
reset_on_load = false
identities_format = sortinghat

[phases]
collection = true
identities = true
enrichment = true
panels = false

[git]
raw_index = git_raw
enriched_index = git_enriched
latest-items = false
studies = [enrich_onion:git, enrich_areas_of_code:git]

[enrich_onion:git]
in_index = git_enriched
out_index = git-onion_enriched
contribs_field = hash

[enrich_areas_of_code:git]
in_index = git_raw
out_index = git-aoc_enriched

[github:repo]
raw_index = github-repo_raw
enriched_index = github-repo_enriched
#api-token = [6d8e4953a6b1ada8d07579914f06cb8844725926, 5cf32f6a078331f3bddf2fe8928de3b7cd32efac, 4f5cf24e81f28e158d6d3192a1bdc9da947a115a]
category = repository
sleep-for-rate = true
no-archive = true

[github:issue]
raw_index = github-issue_raw
enriched_index = github-issue_enriched
#api-token = [6d8e4953a6b1ada8d07579914f06cb8844725926, 5cf32f6a078331f3bddf2fe8928de3b7cd32efac, 4f5cf24e81f28e158d6d3192a1bdc9da947a115a]
sleep-for-rate = true
no-archive = true
filter-classified = true
category = issue
from-date = 2020-04-25

